--- a/source/css/mgr/crosscontextssettings.css
+++ b/source/css/mgr/crosscontextssettings.css
@@ -1,4 +1,16 @@
-@import url(../../js/mgr/ux/LockingGridView/LockingGridView.css);
+.action-buttons {
+  text-align: center;
+}
+.action-buttons li {
+  display: inline-block;
+  font-size: 1.1em;
+  line-height: 0.7;
+  margin-right: 5px;
+}
+.action-buttons li:last-child {
+  margin-right: 0;
+}
+
 .treehillstudio_about {
   cursor: pointer;
   height: 40px;
@@ -6,11 +18,9 @@
   transition: opacity 0.5s;
   margin-top: 20px;
 }
-
 .treehillstudio_about:hover {
   opacity: 1;
 }
-
 .treehillstudio_about .x-panel-body {
   text-align: right;
 }
@@ -19,13 +29,12 @@
   color: #b2bf28;
   text-decoration: none;
 }
-
 .treehillstudio_window a:hover {
   color: #77801a;
 }
 
 .home-panel.debug {
-  background: linear-gradient(to top right, transparent, transparent, transparent, #fff);
+  background: linear-gradient(to top right, transparent, transparent, transparent, #ffffff);
 }
 
 .x-form-check-wrap {
@@ -38,53 +47,96 @@
   pointer-events: none;
   position: absolute;
   width: 180px;
-  z-index: 10;
+  z-index: 15;
 }
-
 .ribbon:before, .ribbon:after {
   border: 5px solid #a20000;
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   z-index: -1;
 }
-
 .ribbon.top-right {
   right: -10px;
   top: -10px;
 }
-
 .ribbon.top-right:before, .ribbon.top-right:after {
   border-right-color: transparent;
   border-top-color: transparent;
 }
-
 .ribbon.top-right:before {
   left: 0;
   top: 0;
 }
-
 .ribbon.top-right:after {
   bottom: 0;
   right: 0;
 }
-
 .ribbon.top-right span {
   left: -46px;
   top: 46px;
   transform: rotate(45deg);
 }
-
 .ribbon span {
   background-color: #be0000;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #fff;
+  color: #ffffff;
   display: block;
-  font: 700 18px/1 'Lato', sans-serif;
+  font: 700 18px/1 "Lato", sans-serif;
   padding: 15px 0;
   position: absolute;
   text-align: center;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   width: 300px;
+}
+
+/*!
+ * Ext JS Library 3.4.0
+ * Copyright(c) 2006-2011 Sencha Inc.
+ * licensing@sencha.com
+ * http://www.sencha.com/license
+ */
+.x-grid3-locked, .x-grid3-unlocked {
+  overflow: hidden;
+  position: absolute;
+}
+
+.x-grid3-locked {
+  border-right: 1px solid #99BBE8;
+}
+
+.x-grid3-locked .x-grid3-scroller {
+  overflow: hidden;
+}
+
+.x-grid3-locked .x-grid3-row {
+  border-right: 0;
+}
+
+.x-grid3-scroll-spacer {
+  height: 19px;
+}
+
+.x-grid3-unlocked .x-grid3-header-offset {
+  padding-left: 0;
+}
+
+.x-grid3-unlocked .x-grid3-row {
+  border-left: 0;
+}
+
+@media screen and (min-width: 961px) {
+  #modx-content > .x-panel-bwrap > .x-panel-body > .x-panel.modx3.debug {
+    margin-right: 15px;
+  }
+  #modx-content > .x-panel-bwrap > .x-panel-body > .x-panel.modx3.debug .modx-page-header {
+    padding-right: 0;
+  }
+  #modx-content > .x-panel-bwrap > .x-panel-body > .x-panel.modx3.debug .modx-page-header ~ .x-panel {
+    margin-right: 0;
+  }
+  #modx-content > .x-panel-bwrap > .x-panel-body > .x-panel.modx3 .treehillstudio_about {
+    margin: 0 15px;
+  }
 }
