--- a/source/sass/mgr/crosscontextssettings.scss
+++ b/source/sass/mgr/crosscontextssettings.scss
@@ -1,4 +1,18 @@
 $treehillstudio-color: #cbd842;
+$red: #be0000;
+
+.action-buttons {
+  text-align: center;
+  li {
+    display: inline-block;
+    font-size: 1.1em;
+    line-height: .7;
+    margin-right: 5px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
 
 .treehillstudio_about {
   cursor: pointer;
@@ -26,7 +40,7 @@ $treehillstudio-color: #cbd842;
 
 .home-panel {
   &.debug {
-    background: linear-gradient(to top right, transparent, transparent, transparent, #fff);
+    background: linear-gradient(to top right, transparent, transparent, transparent, #ffffff);
   }
 }
 
@@ -40,10 +54,10 @@ $treehillstudio-color: #cbd842;
   pointer-events: none;
   position: absolute;
   width: 180px;
-  z-index: 10;
+  z-index: 15;
   &:before,
   &:after {
-    border: 5px solid mix(#000, #be0000, 15);
+    border: 5px solid mix(#000000, $red, 15);
     content: '';
     display: block;
     position: absolute;
@@ -72,9 +86,9 @@ $treehillstudio-color: #cbd842;
     }
   }
   span {
-    background-color: #be0000;
+    background-color: $red;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
-    color: #fff;
+    color: #ffffff;
     display: block;
     font: 700 18px/1 'Lato', sans-serif;
     padding: 15px 0;
@@ -86,4 +100,5 @@ $treehillstudio-color: #cbd842;
   }
 }
 
-@import "../../js/mgr/ux/LockingGridView/LockingGridView.css";
+@import "../../js/mgr/ux/LockingGridView/LockingGridView";
+@import 'modx3';
