Prepare a smaller button column

--- a/source/sass/mgr/crosscontextssettings.scss
+++ b/source/sass/mgr/crosscontextssettings.scss
@@ -1,6 +1,14 @@
 $treehillstudio-color: #cbd842;
 $red: #be0000;
 
+.modx-grid {
+  .x-grid-cell-icons {
+    .x-grid3-cell-inner {
+      padding-right: 5px;
+    }
+  }
+}
+
 .action-buttons {
   text-align: center;
   li {
